force-app/main/default/objects/SALARY_DETAILS__c/SALARY_DETAILS__c.object-meta.xml
<CustomObject>
    <description>The Object having the salary Related data</description>
    <label>Salary Details</label>
    <nameField>
        <label>SALARY DETAILS  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salary Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>