force-app/main/default/objects/SALARY_DETAILS__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>The field contain the bank account number of the employee</description>
    <inlineHelpText>Bank Account Number</inlineHelpText>
    <label>Bank Account Number</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>