force-app/main/default/objects/SALARY_DETAILS__c/fields/Bank_Details__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details__c</fullName>
    <description>This field contain the bank details of the employee</description>
    <inlineHelpText>Bank Details of Employee</inlineHelpText>
    <label>Bank Details</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>