force-app/main/default/objects/SALARY_DETAILS__c/fields/Credited_To__c.field-meta.xml
<CustomField>
    <fullName>Credited_To__c</fullName>
    <description>this field contain the information of the employee to which salary get created</description>
    <inlineHelpText>Employee get salary</inlineHelpText>
    <label>Credited To</label>
    <referenceTo>EMPLOYEE__c</referenceTo>
    <relationshipName>SALARY_DETAILSs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>