force-app/main/default/objects/SALARY_DETAILS__c/fields/Gross_Salary__c.field-meta.xml
<CustomField>
    <fullName>Gross_Salary__c</fullName>
    <description>This filed include gross salary which was calculated by substracting the pf from total earning</description>
    <formula>Total_Earnings__c  -  PF_Deduction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Salary Of the Employee</inlineHelpText>
    <label>Gross Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>