force-app/main/default/objects/SALARY_DETAILS__c/fields/PF_Deduction__c.field-meta.xml
<CustomField>
    <fullName>PF_Deduction__c</fullName>
    <description>This field having the pf deduction</description>
    <inlineHelpText>PF Deduction of employee</inlineHelpText>
    <label>PF Deduction</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>