force-app/main/default/objects/SALARY_DETAILS__c/fields/Salary_Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>Salary_Credit_Date__c</fullName>
    <description>The field contain the date at which the date the  salary get credited</description>
    <inlineHelpText>Salary Credit Date</inlineHelpText>
    <label>Salary Credit Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>