force-app/main/default/objects/SALARY_DETAILS__c/fields/Salary_ID__c.field-meta.xml
<CustomField>
    <fullName>Salary_ID__c</fullName>
    <description>This field contain the id which is auto generated and having this format SAL-{000000}</description>
    <displayFormat>SAL-{000000}</displayFormat>
    <inlineHelpText>Id for each salary Record</inlineHelpText>
    <label>Salary ID</label>
    <type>AutoNumber</type>
</CustomField>