force-app/main/default/objects/SALARY_DETAILS__c/fields/Special_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Special_Allowance__c</fullName>
    <description>This field contain the special Allowance given to employee</description>
    <inlineHelpText>Special Allowance of the employee</inlineHelpText>
    <label>Special Allowance</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>