force-app/main/default/objects/SALARY_DETAILS__c/fields/Total_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Total_Earnings__c</fullName>
    <description>This field having the total earning of the employee</description>
    <formula>Basic__c  +  HRA__c  +  Special_Allowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Earning eargning</inlineHelpText>
    <label>Total Earnings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>