force-app/main/default/objects/SALARY_DETAILS__c/validationRules/AccNumSet.validationRule-meta.xml
<ValidationRule>
    <fullName>AccNumSet</fullName>
    <active>true</active>
    <description>To Validate Bank Account number once set cannot be changed</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(PRIORVALUE(Bank_Account_Number__c))),
    Bank_Account_Number__c &lt;&gt; PRIORVALUE(Bank_Account_Number__c),
 ISCHANGED(Bank_Account_Number__c) 

)</errorConditionFormula>
    <errorMessage>Bank account number can’t be changed once it’s entered</errorMessage>
</ValidationRule>