force-app/main/default/objects/SALARY_DETAILS__c/validationRules/BankfiledNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>BankfiledNotBlank</fullName>
    <active>true</active>
    <description>This validation check that all bank details are filled</description>
    <errorConditionFormula>OR(
    ISBLANK(Bank_Account_Number__c),
    ISBLANK(Bank_Details__c)
)</errorConditionFormula>
    <errorMessage>Please fill all the field of bank details</errorMessage>
</ValidationRule>