force-app/main/default/objects/SALARY_DETAILS__c/validationRules/RestrictRecordCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictRecordCreation</fullName>
    <active>true</active>
    <description>This validation restrict the creation of record for inactive employee</description>
    <errorConditionFormula>Credited_To__r.Is_Active__c  = false</errorConditionFormula>
    <errorMessage>Salary cannot be processed for inactive employees</errorMessage>
</ValidationRule>